# investments

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  resources.txt  start-trading.ps1
backtest/: engine.py  metrics.py  montecarlo.py  strategies.py  walkforward.py
config/: limits.yaml  screen_universe.yaml  settings.yaml
data/: calendar.json  journal.db-shm  journal.db-wal
docs/: CRITICAL_REVIEW.md  DEPLOY.md  DESIGN_AND_ROADMAP.md  ROADMAP.md  dashboard-design.md
memory/: eod_review.md  lessons.md  watchlist.md
playbooks/: gap-and-go.md  news-breakout.md  news-impulse.md  options.md  orb-breakout.md
src/trading/: approvals.py  backup.py  cli.py  config.py  cost.py  execution.py  monitoring.py  (+9 more)
tests/: conftest.py  stubs.py  test_account_math.py  test_agent_runner.py  test_analytics.py  test_autocalibrate.py  test_backtest.py  test_candidate_grading.py  test_dashboard_v2.py  test_day3_protection.py  test_fill_sync.py  test_guardrails.py  test_learning_loop.py  test_m10_signals.py  test_m11_agents.py  test_m12_execution.py  test_m13_ops.py  test_m14_governance.py  test_m15_intel.py  test_m16_transparency.py  test_m17_dashboard.py  test_m18_hardening.py  test_m19_alpha.py  test_m20_visibility.py  test_m21_options.py  test_m3_misc.py  test_m5_ops.py  test_m6_hardening.py  test_m7_tax.py  test_m8_data_backtest.py  test_m9_risk.py  test_new_tools.py  test_opportunity_scanner.py  test_options_and_live.py  test_orchestrator.py  test_paper_proof_phase_a.py  test_regime_conditioning.py  test_sizing_netdelta.py  test_tool_assignment.py  test_tools.py  (+11 more)
(+70 files in other folders)
